# KAN-benchmarking

./: .gitmodules  LICENSE  README.md  benchmark.py  setup.bat  setup.sh  times-BS10-I10-O10.txt  times-BS100-I1000-O1000.txt  times-all-BS100-I1000-H1000.txt  times-all-BS100-I1000-O1000.txt  times-wav-kan-BS100-I1000-O1000.txt
cuFKAN/: FKAN.py  check.py  fftKAN.py  setup.py
extra/: check.py  pyproject.toml
extra/cuFKAN/: FKANLayer.py  __init__.py
extra/kernel/: FKAN.cpp  cuFKAN-kernel.cu  cuFKAN.cpp  setup.py
